--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <title>Frontend Mentor | Job Listings</title>
     <title>Document</title>
 </head>
@@ -50,12 +51,5 @@
             </div>
         </div>
     </div>
-    <script>
-        $(document).ready(function(){
-        $.getJSON("data.json", function(data){
-                console.log(data); 
-            }).fail(function(){console.log("An error has occurred.");});
-        });
-    </script>
 </body>
 </html>
