--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="flexBody"><!--Rest of the body (position relative)-->
         <div class="filter"><!--This is for the filter section(position absolute)--></div>
 
-        <div class="job"><!--Job listings White container-->
+        <div class="job" style="display: none;"><!--Job listings White container-->
             <div class="flexJob"><!--Div for job details--> 
                 <div class="jobImage"><!--Div for image--> 
                     <img src="./images/photosnap.svg">
